css and js link update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/Erwin0917/32/6410a713/_bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/Erwin0917/32/6410a713/_assets/font-awesome/font-awesome.min.css">
 
-    <link rel="stylesheet" href="_css/main.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/Erwin0917/32/4e5ce629/_css/main.css">
 
     
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -401,6 +401,6 @@
     
     <script src="https://cdn.rawgit.com/Erwin0917/32/6410a713/_js/jquery-3.2.0.min.js"></script>
     <script src="https://cdn.rawgit.com/Erwin0917/32/6410a713/_bootstrap/js/bootstrap.min.js"></script>
-    <script src="_js/main.js"></script>
+    <script src="https://cdn.rawgit.com/Erwin0917/32/4e5ce629/_js/main.js"></script>
 </body>
 </html>
